<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ui.management.EnrollDevice.Fragments.FragmentFour"
    >


    <TextView
        android:id="@+id/selectPolicyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectPolicy"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        app:flow_horizontalAlign="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp"
        android:autoSizeTextType="uniform"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/policyListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/selectPolicyTV"
        android:layout_marginTop="8dp"
        />



    <!--
        <Button
            android:id="@+id/fragFourPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginBottom="29dp"
            android:text="Previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    -->

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/createPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createNewPolicy"
        app:backgroundTint="@color/button_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/policyListRecyclerView"
        android:layout_margin="16dp"
        />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="12dp"
        tools:targetApi="lollipop"
        android:src="@drawable/left"
        app:tint="@color/white"
        app:backgroundTint="@color/primary"
        android:contentDescription="@string/previous"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        android:src="@drawable/right"
        app:backgroundTint="@color/primary"
        app:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/next"
        />


</androidx.constraintlayout.widget.ConstraintLayout>