<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/appDetailsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/applicationDetails"
        android:textColor="@color/black"
        android:textSize="32sp"
        android:textStyle="bold"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deviceUnattendedTimerLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/deviceUnattendedTimer"
        android:textColorHint="@color/blackNight"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/button_default"
        app:boxStrokeErrorColor="@color/alert"
        app:endIconTint="@color/blackNight"
        app:helperText="@string/deviceUnattendedTimerExplanation"
        app:helperTextEnabled="false"
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium"
        app:helperTextTextColor="@color/blackNight"
        app:hintTextColor="@color/button_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appDetailsTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deviceUnattendedTimerEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textColor="@color/blackNight"
            app:backgroundTint="@color/whiteSmoke" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:id="@+id/applicationTypeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deviceUnattendedTimerLayout"
        app:layout_constraintBottom_toTopOf="@id/upiPaymentStatusLayout"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="16dp"
        android:hint="@string/appType"
        android:textColorHint="@color/blackNight"
        app:endIconTint="@color/black"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeErrorColor="@color/alert"
        app:boxStrokeColor="@color/button_default"
        app:hintTextColor="@color/button_default"
        >

        <AutoCompleteTextView
            android:id="@+id/applicationTypeTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@color/whiteSmoke"
            android:hint="@string/appType"
            android:textColor="#1B1A1A"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:id="@+id/upiPaymentStatusLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applicationTypeLayout"
        app:layout_constraintBottom_toTopOf="@id/languageLayout"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/upiPayment"
        android:textColorHint="@color/blackNight"
        app:endIconTint="@color/black"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeErrorColor="@color/alert"
        app:boxStrokeColor="@color/button_default"
        app:hintTextColor="@color/button_default"
        >

        <AutoCompleteTextView
            android:id="@+id/upiPaymentStatusTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@color/whiteSmoke"
            android:hint="@string/appType"
            android:textColor="#1B1A1A"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:id="@+id/languageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upiPaymentStatusLayout"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/language"
        android:textColorHint="@color/blackNight"
        app:endIconTint="@color/black"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeErrorColor="@color/alert"
        app:boxStrokeColor="@color/button_default"
        app:hintTextColor="@color/button_default"
        >

        <AutoCompleteTextView
            android:id="@+id/languageTv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:backgroundTint="@color/whiteSmoke"
            android:hint="@string/appType"
            android:textColor="#1B1A1A"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/marginTopLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageLayout"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/marginTop"
        android:textColorHint="@color/blackNight"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeErrorColor="@color/alert"
        app:boxStrokeColor="@color/button_default"
        app:hintTextColor="@color/button_default"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/marginTopEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/blackNight"
            app:backgroundTint="@color/whiteSmoke"
            android:imeOptions="actionNext"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/marginBottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/marginTopLayout"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/marginBottom"
        android:textColorHint="@color/blackNight"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeErrorColor="@color/alert"
        app:boxStrokeColor="@color/button_default"
        app:hintTextColor="@color/button_default"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/marginBottomEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/blackNight"
            app:backgroundTint="@color/whiteSmoke"
            android:imeOptions="actionNext"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/marginLeftLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/marginBottomLayout"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/marginLeft"
        android:textColorHint="@color/blackNight"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeErrorColor="@color/alert"
        app:boxStrokeColor="@color/button_default"
        app:hintTextColor="@color/button_default"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/marginLeftEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/blackNight"
            app:backgroundTint="@color/whiteSmoke"
            android:imeOptions="actionNext"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:id="@+id/marginRightLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/marginLeftLayout"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32dp"
        android:hint="@string/marginRight"
        android:textColorHint="@color/blackNight"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeErrorColor="@color/alert"
        app:boxStrokeColor="@color/button_default"
        app:hintTextColor="@color/button_default"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/marginRightEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/blackNight"
            app:backgroundTint="@color/whiteSmoke"
            android:imeOptions="actionDone"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="12dp"
        android:contentDescription="@string/previous"
        android:src="@drawable/left"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@color/white"
        tools:targetApi="lollipop" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/next"
        android:src="@drawable/right"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>